<resources>
    <string name="app_name">bunti</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="registrarme">Registrarme</string>
    <string name="email">Email</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="btnacep">Aceptas nuestra política de privacidad y nuestros términos de uso</string>
    <string name="welcome">Te damos la bienvenida a Bunt i App!</string>
    <string name="sesion">Regístrate o Inicia sesión con tu email</string>
</resources>
